v1.0.x -
* Welcome to REPENTOGON+ !
/newline/
Additions:
* Camera:
	- Update(bool Interpolated = false)
* GridEntity
	- [Get/Set/Reset]WaterClipFlags
* Entity
	- [Get/Set/Reset]WaterClipFlags
	- CanDevolve
* EntityPickup:
	- GetMegaChest[Left/Right]Collectible
	- Returns the other EntityPickup for a Mega Chest
* EntityPlayer:
	- [Get/Set]ActionHoldDrop - how long player holds action drop button.
	- [Get/Set]ForgottenSwapFormCooldown
	- [Get/Set]RockBottomMoveSpeed
	- [Get/Set]RockBottomMaxFireDelay
	- [Get/Set]RockBottomDamage
	- [Get/Set]RockBottomTearRange
	- [Get/Set]RockBottomShotSpeed
	- [Get/Set]RockBottomLuck
	- [Get/Set]RevelationCharge
	- GetPlayerHUD
	- [Get/Set]SuplexState
	- [Get/Set]SuplexAimCountdown
	- [Get/Set]SuplexTargetPosition
	- [Get/Set]SuplexLandPosition
	- CreateAfterimage
	- [Add/Get]CandyHeartBonus
	- [Add/Get]SoulLocketBonus
	- GetTearsCap
	- GetStatMultiplier
	- GetSmeltedTrinketDesc
* EntityFamiliar:
	- IsLilDelirium
	- SetLilDelirium
	- GetRandomWisp
	- GetActiveWeaponEntity
	- GetActiveWeaponNumFired
* EntityConfigEntity:
	- GetDevolvedEntity
* Level:
	- Added overloads for CanPlaceRoom(AtDoor) and FindValidRoomPlacementLocations that accept a RoomShape and DoorMask instead of a RoomConfigRoom.
* PlayerManager:
	- GetRandomCollectibleOwner
	- GetRandomTrinketOwner
* ItemPool:
	- AddCollectible
	- AddTemporaryCollectible
	- RemoveTemporaryCollectible
* ItemConfig_Item:
	- Add/RemoveCustomTag
	- Add/RemoveCustomCacheTag
* HUD:
	- GetStackedStreakSprite
	- GetPlayerStreakSprite
* PlayerHUD:
	- GetIndex
	- GetLayout
* Room:
	- TriggerOutput(RoomEventOutput GroupIdx)
* RoomConfig:
	- AddRooms
* RoomConfigSet:
	- AddRooms
* FXLayers:
	- AddPoopFx(ColorMod Color)
* Weapon:
	- GetMainEntity
		Returns active entity used by weapon (Brimstone - EntityLaser, Mom's Knife -  EntityKnife and etc.)
* CharacterMenu
	- GetPlayerTypeFromCharacterMenuID(int CharacterMenuID, bool Tainted)
		Tainted boolean defaults to current menu if unspecified.