@@ -1,3 +1,6 @@
+"33c0c701000000008941":
+__thiscall void EntitySaveState::constructor();
+
 "558bec6aff68????????64a1????????505657a1????????33c5508d45??64a3????????8bf98d77??c745??000000008b4e??85c974??8b018b40??ffd084c074??a1????????85c074??56ffd083c4048d77??c745??010000008b4e??85c974??8b018b40??ffd084c074??a1????????85c074??56ffd083c4048b4d??64890d????????595f5e8be55dc3??????????????????????????????????????558bec6aff68????????64a1????????5083ec14":
 __thiscall void** EntitySaveState::Clear();
 
@@ -31,6 +34,11 @@ struct EntitySaveState depends (Vector) {
 		struct NPC; // FIREPLACE and MOVABLE_TNT only
 		struct Effect;
 		struct Minecart;
+		
+		EntitySaveState() {
+			this->constructor();
+		}
+		
 	}}
 } : 0x78; // 0x78
 
