@@ -1,0 +1,19 @@
+struct ReferenceCounter_EntitySaveState {
+    EntitySaveState* saveState : 0x0;
+    KAGE_SmartPointer_EntitySaveState* counter : 0x4;
+
+    {{
+    ReferenceCounter_EntitySaveState() {
+        saveState = nullptr;
+        counter = nullptr;
+    }
+    }}
+} : 0x8;
+
+"558bec6aff68????????64a1????????5051535657a1????????33c5508d45??64a3????????8bf16a18e8????????8bf883c404897d??8bcfc745??00000000e8????????8b5d??c707????????895f??c745??ffffffff8b4e??85c974??8b018b40??ffd084c074??a1????????85c074??56ffd083c404897e??8bc6891e8b4d??64890d????????595f5e5b8be55dc20400????????????????????????568bf1576aff8b46??8d4e??ff50??0fb746??6685c074??48668946??6685c075??8b46??8d4e??ff50??8b7e":
+ReferenceCounter_EntitySaveState& ReferenceCounter_EntitySaveState::SetP(EntitySaveState* other);
+
+/*
+"558bec6aff68????????64a1????????5056a1????????33c5508d45??64a3????????8bf18b4e??85c974??8b018b40??ffd084c074??a1????????85c074??56ffd083c4048b4d??64890d????????595e8be55dc3????????????????????558bec6aff68????????64a1????????5051":
+void ReferenceCounter_ImageBase::DecrRef();
+*/
